--- a/vault.html
+++ b/vault.html
@@ -1,302 +1,52 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
-  <meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
-  <meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
-  <meta property="og:url" content="https://anchorstack.pro">
-  <meta name="twitter:card" content="summary_large_image">
-
-  <meta name="description" content="AnchorStack: Tools, templates, and clarity kits for creators, thinkers, and focused doers. Curated digital momentum, one product at a time.">
-  <meta name="author" content="Ricky Jarnagin">
-  <meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits, hustle, Notion templates, product launch, focus, productivity">
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-QL8N3YFW6B');
-  </script>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta charset="utf-8"/>
-  <title>AnchorStack Product Vault</title>
-  <link rel="icon" type="image/png" href="favicon.png">
-
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #f4f4f4;
-      margin: 0;
-      padding: 2rem;
-    }
-
-    .hero-logo {
-      height: 80vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(to bottom, #2f2f2f, #3a3a3a);
-      margin-bottom: 2rem;
-    }
-
-    .hero-logo img {
-      max-width: 300px;
-      height: auto;
-      filter: drop-shadow(0 0 10px rgba(0, 123, 255, 0.5));
-    }
-
-    .vault-grid {
-      display: flex;
-      flex-direction: column;
-      gap: 3rem;
-      margin-top: 2rem;
-    }
-
-    .tier-section {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 1.5rem;
-    }
-
-   .product-card {
-  position: relative;  /* ← add this line */
-  background-color: white;
-  border-radius: 12px;
-  text-align: center;
-  padding: 1rem;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  text-decoration: none;
-  color: #222;
-  transition: transform 0.2s, box-shadow 0.2s;
-}
-
-
-    .product-card:hover {
-      transform: scale(1.03);
-      box-shadow: 0 6px 16px rgba(0,0,0,0.15);
-    }
-
-    .product-card img {
-      max-width: 100%;
-      border-radius: 8px;
-      margin-bottom: 0.75rem;
-    }
-
-    .badge {
-      position: absolute;
-      top: 8px;
-      right: 8px;
-      background: crimson;
-      color: white;
-      font-size: 0.7rem;
-      padding: 4px 8px;
-      border-radius: 12px;
-      font-weight: bold;
-      z-index: 10;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
-
-    .product-card h3 {
-      font-size: 1.1rem;
-      margin-top: 0.5rem;
-      font-weight: 600;
-    }
-
-    .tier-button {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      margin: 5px;
-      font-size: 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: 600;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-    }
-
-    .tier-button:hover {
-      background-color: #0056b3;
-      transform: scale(1.05);
-    }
-  </style>
-.vault-banner {
-  background: #ffeaa7;
-  padding: 1rem;
-  text-align: center;
-  font-size: 1.1rem;
-  border-radius: 10px;
-  margin-bottom: 20px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-.vault-banner .cta-button {
-  display: inline-block;
-  background: #00b894;
-  color: #fff;
-  padding: 8px 16px;
-  border-radius: 6px;
-  margin-top: 10px;
-  text-decoration: none;
-  font-weight: bold;
-}
-.vault-banner .cta-button:hover {
-  background: #019875;
-}
-
-
+  <meta charset="UTF-8">
+  <title>AnchorStack Vault</title>
 </head>
-<body>
+<body style="font-family: sans-serif; margin: 0; padding: 0; background-color: #fff; color: #222;">
 
-<div class="hero-logo">
-  <a href="index.html">
-    <img alt="AnchorStack Logo" src="images/Logo.png" />
-  </a>
-</div>
-
-<h1 style="text-align:center;">AnchorStack Product Vault</h1>
-
-<div style="text-align:center; margin-bottom: 2rem;">
-  <h2>What are you looking for today?</h2>
-  <button class="tier-button" onclick="filterTier('free')">🆓 Free</button>
-  <button class="tier-button" onclick="filterTier('mid')">💡 Midrange</button>
-  <button class="tier-button" onclick="filterTier('top')">🚀 Top Tier</button>
-  <button class="tier-button" onclick="filterTier('all')">🔄 Show All</button>
-</div>
-<div style="text-align: center; font-family: sans-serif; max-width: 600px; margin: auto; line-height: 1.6;">
-<h2>🔒 Choose Your Access Level</h2>
-<div class="vault-pricing-container">
-  <div class="vault-tier-card mid-tier">
-    <h2>💼 Mid Tier Access</h2>
-    <p><strong>$29/month</strong></p>
-    <p>Recurring monthly membership. Get full access to all Mid Tier Vault drops — now and in the future.</p>
+  <!-- THANK YOU BANNER -->
+  <div style="background:#ffeaa7; padding:1rem; text-align:center; font-size:1.1rem; border-radius:10px; margin:20px; box-shadow:0 0 10px rgba(0,0,0,0.1);">
+    <p>🎉 Over 600 sales in the Vault in just 24 hours. Thank you for making this launch unforgettable.</p>
+    <p><strong>New drops are coming soon.</strong> Creators are moving fast — don’t miss what’s waiting inside.</p>
+    <a href="/vault" style="display:inline-block; background:#00b894; color:#fff; padding:8px 16px; border-radius:6px; text-decoration:none; font-weight:bold; margin-top:10px;">Explore Now</a>
   </div>
-  <div class="vault-tier-card top-tier">
-    <h2>🔐 Top Tier Access</h2>
-    <p><strong>$129/year</strong></p>
-    <p>Unlock every premium product, bonus drop, and insider tool in the Vault for a full 12 months.</p>
-    <p><em>Renews yearly. Cancel anytime. Grandfathered one-time members retain lifetime access.</em></p>
-  </div>
-</div>
-<!-- SUBSTACK SIDEBAR -->
-  <div style="flex:1;">
-    <div style="background:#f9f9f9; padding:1rem; border-radius:8px; width:100%; font-size:0.9rem;">
-      <h4 style="margin-top:0; font-size:1rem; color:#222;">📬 Latest from Substack</h4>
-      <ul style="padding-left:1em; margin:0;">
-        <li><a href="https://rickyjarnagin.substack.com/p/new-drops-just-hit-the-vault-see" target="_blank" style="color:#0074cc; text-decoration:none;">New Drops Just Hit the Vault</a></li>
-        <li><a href="https://rickyjarnagin.substack.com/p/how-i-built-the-combo-pack" target="_blank" style="color:#0074cc; text-decoration:none;">How I Built the Combo Pack</a></li>
-        <li><a href="https://rickyjarnagin.substack.com/p/7-day-reset-kit" target="_blank" style="color:#0074cc; text-decoration:none;">7-Day Reset Kit</a></li>
-      </ul>
+
+  <!-- MAIN LAYOUT -->
+  <div style="display:flex; flex-wrap:wrap; padding: 20px; gap: 20px;">
+
+    <!-- LEFT COLUMN: MAIN CONTENT -->
+    <div style="flex:3 1 60%; min-width:300px;">
+      <h2>🧰 Vault Products</h2>
+      <p>This is where your current product grid or content goes.</p>
+    </div>
+
+    <!-- RIGHT COLUMN: SUBSTACK SIDEBAR -->
+    <div style="flex:1 1 300px;">
+      <div style="background:#f9f9f9; padding:1rem; border-radius:8px; width:100%; font-size:0.9rem;">
+        <h4 style="margin-top:0; font-size:1rem; color:#222;">📬 Latest from Substack</h4>
+        <ul style="padding-left:1em; margin:0;">
+          <li><a href="https://rickyjarnagin.substack.com/p/new-drops-just-hit-the-vault-see" target="_blank" style="color:#0074cc; text-decoration:none;">New Drops Just Hit the Vault</a></li>
+          <li><a href="https://rickyjarnagin.substack.com/p/how-i-built-the-combo-pack" target="_blank" style="color:#0074cc; text-decoration:none;">How I Built the Combo Pack</a></li>
+          <li><a href="https://rickyjarnagin.substack.com/p/7-day-reset-kit" target="_blank" style="color:#0074cc; text-decoration:none;">7-Day Reset Kit</a></li>
+        </ul>
+      </div>
     </div>
   </div>
-<div style="display: flex; gap: 10px; flex-wrap: wrap;">
-  <a href="https://grafixartistry6.gumroad.com/l/xalvnc" …>Mid Tier Access – $29/month</a>
-  <a href="https://grafixartistry6.gumroad.com/l/cayxc" …>Top Tier Access – $129/year</a>
-</div>
-<div class="vault-banner">
-  <p>🎉 Over 600 sales in the Vault in just 24 hours. Thank you for making this launch unforgettable.</p>
-  <p><strong>New drops are coming soon.</strong> Creators are moving fast — don’t miss what’s waiting inside.</p>
-  <a href="/vault" class="cta-button">Explore Now</a>
-</div>
 
-
-  <h2>🔒 Choose Your Access Level</h2>
-
- <div class="vault-pricing-container">
-
- <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-  <a href="https://grafixartistry6.gumroad.com/l/xalvnc" target="_blank" style="background-color: #00cfff; color: white; font-weight: bold; padding: 12px 20px; border-radius: 6px; text-decoration: none; display: inline-block;">
-    Mid Tier Access – $29/month
-  </a>
-  
-  <a href="https://grafixartistry6.gumroad.com/l/cayxc" target="_blank" style="background-color: #00cfff; color: white; font-weight: bold; padding: 12px 20px; border-radius: 6px; text-decoration: none; display: inline-block;">
-    Top Tier Access – $129/year
-  </a>
-</div>
-   <p style="font-size: 0.85rem; color: #777; margin-top: 6px;">
-  Cancel anytime. Grandfathered Top Tier members keep lifetime access.
-</p>
-
-</div>
-<hr style="margin: 2rem 0; border: none; border-top: 1px solid #ccc;">
-<div class="vault-grid">
-
-  <h2 style="text-align: center; color: #00BFFF;">🆓 Free Resources</h2>
-  <div class="tier-section">
-    <a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/msenf" target="_blank">
-      <span class="badge">New</span>
-      <img src="images/clarity-core-bundle.jpg" alt="Clarity Core Bundle">
-      <h3>Clarity Core Bundle</h3>
-      <p class="price">$39</p>
-    </a>
-    <a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/nupwf" target="_blank">
-      <span class="badge">New</span>
-      <img src="images/calm-clarity-kit.jpg" alt="Calm Clarity Kit">
-      <h3>Calm Clarity Kit – 7-Day Edition</h3>
-      <p class="price">$15</p>
-    </a>
-    <a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/jqzdtq" target="_blank">
-      <span class="badge">New</span>
-      <img src="images/launch-earn-combo.jpg" alt="Launch & Earn Combo">
-      <h3>Launch & Earn Combo Pack</h3>
-      <p class="price">$15</p>
-    </a>
+  <!-- AFFILIATE BLURB -->
+  <div style="margin-top:40px; padding:1rem; border-top:1px solid #ddd;">
+    <h4 style="margin-bottom:0.5em;">🚀 Share the Vault. Get Paid.</h4>
+    <p>Join our manual affiliate pilot. Share your custom link and earn for every upgrade to Mid or Top Tier — no approval required.</p>
+    <p><a href="mailto:support@anchorstack.pro?subject=Affiliate%20Request" style="display:inline-block; background:#6c5ce7; color:white; padding:8px 14px; border-radius:5px; text-decoration:none; font-weight:bold;">Become an Affiliate</a></p>
   </div>
 
-  <h2 style="text-align: center; color: #00BFFF;">💡 Midrange Kits</h2>
-  <div class="tier-section">
-    <a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/lapqw" target="_blank">
-      <span class="badge">New</span>
-      <img src="images/work-life-integration.jpg" alt="Work-Life Integration">
-      <h3>Work-Life Integration Mastery</h3>
-      <p class="price">$9</p>
-    </a>
-    <a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/jfkdn" target="_blank">
-      <span class="badge">New</span>
-      <img src="images/hustlemode-command-center.jpg" alt="HustleMode Command Center">
-      <h3>HustleMode Notion Command Center</h3>
-      <p class="price">$29</p>
-    </a>
-  </div>
-
-  <h2 style="text-align: center; color: #00BFFF;">🚀 Top Tier Bundles</h2>
-  <div class="tier-section">
-    <a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/gxpksf" target="_blank">
-      <span class="badge">New</span>
-      <img src="images/clarity-master-bundle.jpg" alt="Clarity Master Bundle">
-      <h3>Clarity Master Bundle</h3>
-      <p class="price">$99</p>
-    </a>
-    <a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/eylhzc" target="_blank">
-      <span class="badge">New</span>
-      <img src="images/digital-clarity-kit.jpg" alt="Digital Clarity Kit">
-      <h3>Digital Clarity Kit (Blueprint)</h3>
-      <p class="price">$199</p>
-    </a>
-  </div>
-
-</div>
-
-<div style="text-align: center; margin-top: 2rem;">
-  <a href="index.html" style="background: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 6px;">
-    ← Return to AnchorStack Home
-  </a>
-</div>
-
-<script>
-  function filterTier(tier) {
-    const allCards = document.querySelectorAll('.product-card');
-    allCards.forEach(card => {
-      if (tier === 'all') {
-        card.style.display = 'block';
-      } else {
-        card.style.display = card.classList.contains(`tier-${tier}`) ? 'block' : 'none';
-      }
-    });
-  }
-</script>
+  <!-- MICRO ABOUT -->
+  <p style="font-size:0.9rem; text-align:center; color:#555; margin-top:40px;">
+    <strong>AnchorStack</strong> builds clarity-first tools for digital creators. Want to collaborate? <a href="mailto:support@anchorstack.pro" style="color:#0074cc; text-decoration:none;">Let’s talk.</a>
+  </p>
 
 </body>
 </html>
-
