--- a/vault.html
+++ b/vault.html
@@ -1,74 +1,233 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AnchorStack Vault</title>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-QL8N3YFW6B');
+</script>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>AnchorStack Vault</title>
+<style>
+.vault-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 2rem;
+}
+.main-products {
+  flex: 1 1 65%;
+  min-width: 300px;
+}
+.substack-sidebar {
+  flex: 1 1 30%;
+  min-width: 280px;
+  max-width: 360px;
+}
+.vault-grid {
+  justify-content: flex-start;
+  max-width: 1000px;
+  margin: auto;
+}
+.product-card {
+  max-width: 220px;
+}
+
+  @media (min-width: 768px) {
+    .substack-sidebar {
+      float: right;
+      max-width: 300px;
+      margin-left: 2rem;
+    }
+  }
+  @media (max-width: 767px) {
+    .substack-sidebar {
+      float: none;
+      margin: 2rem auto;
+    }
+  }
+  .product-card {
+    max-width: 240px;
+    padding: 0.75rem;
+  }
+
+    .product-card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 8px;
+      background: #e0e0e0;
+    }
+    .product-card h3 {
+      font-size: 1rem;
+      margin: 0.5rem 0;
+      overflow-wrap: break-word;
+      word-break: break-word;
+    }
+    .product-card .price {
+      font-weight: bold;
+      color: #6c5ce7;
+    }
+
+  body {
+    font-family: sans-serif;
+    background: #f9f9f9;
+    color: #333;
+    padding: 2rem;
+    margin: 0;
+  }
+  h1, h2 {
+    text-align: center;
+  }
+  .vault-banner {
+    background: #6c5ce7;
+    color: #fff;
+    padding: 1.5rem;
+    border-radius: 10px;
+    margin-bottom: 2rem;
+    text-align: center;
+    font-size: 1.2rem;
+  }
+  .vault-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 1.5rem;
+    justify-content: center;
+  }
+  .product-card {
+    background-color: white;
+    border-radius: 12px;
+    text-align: center;
+    padding: 1rem;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    text-decoration: none;
+    color: #222;
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+  .product-card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+  }
+  .substack-form {
+    text-align: center;
+    margin-top: 3rem;
+  }
+  .substack-form iframe {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 480px;
+    height: 180px;
+  }
+
+  .product-card::before {
+    content: "";
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-right: 6px;
+    vertical-align: middle;
+  }
+  .tier-free::before {
+    background-color: #00C853;
+  }
+  .tier-mid::before {
+    background-color: #FFD600;
+  }
+  .tier-top::before {
+    background-color: #D50000;
+  }
+
+</style>
 </head>
-<body style="font-family: sans-serif; margin: 0; padding: 0; background-color: #fff; color: #222;">
+<body>
+<div class="vault-container">
 
-  <!-- THANK YOU BANNER -->
-  <div style="background:#ffeaa7; padding:1rem; text-align:center; font-size:1.1rem; border-radius:10px; margin:20px; box-shadow:0 0 10px rgba(0,0,0,0.1);">
-    <p>🎉 Over 600 sales in the Vault in just 24 hours. Thank you for making this launch unforgettable.</p>
-    <p><strong>New drops are coming soon.</strong> Creators are moving fast — don’t miss what’s waiting inside.</p>
-    <a href="/vault" style="display:inline-block; background:#00b894; color:#fff; padding:8px 16px; border-radius:6px; text-decoration:none; font-weight:bold; margin-top:10px;">Explore Now</a>
+  <h1>🚪 Welcome to the AnchorStack Vault</h1>
+  <div class="vault-banner">
+    Thank you for being a Vault Member. You're unlocking tools designed to bring clarity, momentum, and peace to your creative work.
   </div>
 
-  <!-- MAIN FLEX LAYOUT -->
-  <div style="display:flex; flex-wrap:wrap; padding: 20px; gap: 20px;">
+  <div class="main-products">
+<h2>🎁 Free Tier Access</h2>
+  <div class="vault-grid">
+<a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/msenf" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
+<img alt="Clarity Core Bundle" src="images/clarity-core-bundle.jpg"/>
+<h3>Clarity Core Bundle</h3><p class="price">$39</p>
+</a>
+<a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/nupwf" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
+<img alt="Calm Clarity Kit – 7-Day Edition" src="images/calm-clarity-kit.jpg"/>
+<h3>Calm Clarity Kit – 7-Day Edition</h3><p class="price">$15</p>
+</a>
+<a class="product-card tier-free" href="https://grafixartistry6.gumroad.com/l/jqzdtq" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
+<img alt="Launch &amp; Earn Combo Pack" src="images/launch-earn-combo.jpg"/>
+<h3>Launch &amp; Earn Combo Pack</h3><p class="price">$15</p>
+</a>
+</div>
 
-    <!-- LEFT COLUMN: PRODUCT GRID -->
-    <div style="flex:3 1 60%; min-width:300px;">
-      <h2 style="font-size:1.5rem; margin-bottom:1rem;">🧰 Vault Products</h2>
+  <h2>⚡ Mid Tier Access</h2>
+  <div class="vault-grid">
+<a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/lapqw" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
+<img alt="Work-Life Integration Mastery" src="images/work-life-integration.jpg"/>
+<h3>Work-Life Integration Mastery</h3><p class="price">$9</p>
+</a>
+<a class="product-card tier-mid" href="https://grafixartistry6.gumroad.com/l/jfkdn" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
+<img alt="HustleMode Notion Command Center" src="images/hustlemode-command-center.jpg"/>
+<h3>HustleMode Notion Command Center</h3><p class="price">$29</p>
+</a>
+</div>
 
-      <!-- Product Grid -->
-      <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 16px;">
+  <h2>🚀 Top Tier Access</h2>
+  <div class="vault-grid">
+<a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/gxpksf" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
+<img alt="Clarity Master Bundle" src="images/clarity-master-bundle.jpg"/>
+<h3>Clarity Master Bundle</h3><p class="price">$99</p>
+</a>
+<a class="product-card tier-top" href="https://grafixartistry6.gumroad.com/l/eylhzc" rel="noopener noreferrer" target="_blank"><span class="badge">New</span>
+<img alt="Digital Clarity Kit (Blueprint)" src="images/digital-clarity-kit.jpg"/>
+<h3>Digital Clarity Kit (Blueprint)</h3><p class="price">$199</p>
+</a>
+</div>
 
-        <div style="border:1px solid #ccc; border-radius:8px; padding:16px;">
-          <h3 style="margin-top:0;">📘 Momentum Mapping Toolkit</h3>
-          <p>A practical toolkit to map, plan, and sustain your personal momentum.</p>
-          <a href="https://grafixartistry6.gumroad.com/l/npruu" target="_blank" style="background:#6c5ce7; color:#fff; padding:8px 14px; border-radius:5px; text-decoration:none; display:inline-block; margin-top:10px;">View Product</a>
-        </div>
+  <div class="substack-form substack-sidebar">
+    <h2>📬 Want More? Get Vault Updates</h2>
+    <p>Subscribe below to receive fresh drops, insider-only bonuses, and early access announcements:</p>
+    <iframe src="https://rickyjarnagin.substack.com/embed" frameborder="0" scrolling="no"></iframe>
+  </div>
 
-        <div style="border:1px solid #ccc; border-radius:8px; padding:16px;">
-          <h3 style="margin-top:0;">💼 Work-Life Integration Mastery</h3>
-          <p>Master balance with this actionable self-guided system for creators.</p>
-          <a href="https://grafixartistry6.gumroad.com/l/lapqw" target="_blank" style="background:#6c5ce7; color:#fff; padding:8px 14px; border-radius:5px; text-decoration:none; display:inline-block; margin-top:10px;">View Product</a>
-        </div>
-
-        <div style="border:1px solid #ccc; border-radius:8px; padding:16px;">
-          <h3 style="margin-top:0;">🧠 Calm Clarity Kit – 7-Day Edition</h3>
-          <p>Reset your mindset and eliminate digital clutter in one focused week.</p>
-          <a href="https://grafixartistry6.gumroad.com/l/nupwf" target="_blank" style="background:#6c5ce7; color:#fff; padding:8px 14px; border-radius:5px; text-decoration:none; display:inline-block; margin-top:10px;">View Product</a>
-        </div>
-
-      </div>
+<section class="vault-extras">
+  <details style="margin-top: 3rem;">
+    <summary style="font-size: 1.2rem; cursor: pointer;">📬 Get Vault Updates</summary>
+    <div class="substack-form substack-sidebar" style="margin-top: 1rem;">
+      <p>Subscribe below to receive fresh drops, insider-only bonuses, and early access announcements:</p>
+      <iframe src="https://rickyjarnagin.substack.com/embed" frameborder="0" scrolling="no"
+              style="border: 1px solid #ccc; border-radius: 10px; width: 100%; max-width: 480px; height: 180px;"></iframe>
     </div>
+  </details>
 
-    <!-- RIGHT COLUMN: SUBSTACK SIDEBAR -->
-    <div style="flex:1 1 300px;">
-      <div style="background:#f9f9f9; padding:1rem; border-radius:8px; width:100%; font-size:0.9rem;">
-        <h4 style="margin-top:0; font-size:1rem; color:#222;">📬 Latest from Substack</h4>
-        <ul style="padding-left:1em; margin:0;">
-          <li><a href="https://rickyjarnagin.substack.com/p/new-drops-just-hit-the-vault-see" target="_blank" style="color:#0074cc; text-decoration:none;">New Drops Just Hit the Vault</a></li>
-          <li><a href="https://rickyjarnagin.substack.com/p/how-i-built-the-combo-pack" target="_blank" style="color:#0074cc; text-decoration:none;">How I Built the Combo Pack</a></li>
-          <li><a href="https://rickyjarnagin.substack.com/p/7-day-reset-kit" target="_blank" style="color:#0074cc; text-decoration:none;">7-Day Reset Kit</a></li>
-        </ul>
-      </div>
+  <div class="vault-blurbs" style="margin-top: 3rem;">
+    <div style="margin-bottom: 2rem;">
+      <h3>💸 Become an Affiliate</h3>
+      <p>Want to earn by sharing the Vault? Join our affiliate program and get paid when others unlock access.</p>
+      <a href="<a href="mailto:support@anchorstack.pro?subject=Vault Affiliate Inquiry">" target="_blank" style="color: #6c5ce7; font-weight: bold;">Become an affiliate →</a>
+    </div>
+    <div>
+      <h3>🤝 Collaboration Invitation</h3>
+      <p>Got something to share with the AnchorStack community? We're always open to high-quality collabs, guest kits, or digital tools.</p>
+      <a href="<a href="mailto:support@anchorstack.pro?subject=Vault Collaboration Inquiry">" target="_blank" style="color: #6c5ce7; font-weight: bold;">Pitch your idea →</a>
     </div>
   </div>
+</section>
 
-  <!-- AFFILIATE BLURB -->
-  <div style="margin-top:40px; padding:1rem; border-top:1px solid #ddd;">
-    <h4 style="margin-bottom:0.5em;">🚀 Share the Vault. Get Paid.</h4>
-    <p>Join our manual affiliate pilot. Share your custom link and earn for every upgrade to Mid or Top Tier — no approval required.</p>
-    <p><a href="mailto:support@anchorstack.pro?subject=Affiliate%20Request" style="display:inline-block; background:#6c5ce7; color:white; padding:8px 14px; border-radius:5px; text-decoration:none; font-weight:bold;">Become an Affiliate</a></p>
-  </div>
+</div>
+</body>
 
-  <!-- MICRO ABOUT -->
-  <p style="font-size:0.9rem; text-align:center; color:#555; margin-top:40px; margin-bottom: 40px;">
-    <strong>AnchorStack</strong> builds clarity-first tools for digital creators. Want to collaborate? <a href="mailto:support@anchorstack.pro" style="color:#0074cc; text-decoration:none;">Let’s talk.</a>
-  </p>
 
+</div>
 </body>
 </html>
