--- a/index.html
+++ b/index.html
@@ -1,108 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Meta & SEO -->
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta property="og:title" content="AnchorStack – Clarity Kits & Tools for Creators">
-  <meta property="og:description" content="Curated momentum tools and digital product kits that help creators focus, launch, and grow — without the noise.">
-  <meta property="og:image" content="https://anchorstack.pro/images/Logo.png">
-  <meta property="og:url" content="https://anchorstack.pro">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="description" content="AnchorStack: Tools, templates, and clarity kits for creators…">
-  <meta name="author" content="Ricky Jarnagin">
-  <meta name="keywords" content="AnchorStack, digital products, creator tools, clarity kits…">
-
-  <!-- Favicon & Analytics -->
-  <link rel="icon" type="image/png" href="favicon.png">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QL8N3YFW6B"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-QL8N3YFW6B');
-  </script>
-
-  <!-- Substack embed script (load once) -->
-  <script async src="https://rickyjarnagin.substack.com/embed.js"></script>
-
-  <title>Home – AnchorStack</title>
-
-  <!-- All CSS -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AnchorStack</title>
+  <link rel="icon" href="images/favicon.png" type="image/png" />
   <style>
     body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 2rem;
-      background: #2f2f2f;
-      color: #f0f0f0;
-      line-height: 1.6;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
+      background: #111;
+      color: white;
       text-align: center;
+      padding: 2rem;
+      font-family: sans-serif;
     }
-    a { color: #00BFFF; text-decoration: none; font-weight: bold; }
-    .button {
-      display: inline-block;
-      background: #00BFFF;
-      color: #fff;
-      padding: 0.75rem 1.5rem;
-      border-radius: 6px;
-      margin: 1rem 0.5rem;
-    }
-    h1, h2 { color: #ffffff; }
-
-    /* Ensure Substack embeds use a readable text color */
-    .substack-post {
-      color: #222 !important;
-    }
-    .substack-post a {
-      color: #007bff !important;
-    }
-
-    .substack-embed-wrapper {
-      max-width: 480px;
-      width: 100%;
-      margin: 2rem auto;
-      padding: 1rem;
-      background: #3a3a3a;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-    }
-    .substack-embed-wrapper iframe {
-      width: 100%;
+    .hero img {
+      max-width: 100%;
       height: auto;
-      border: none;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
     }
-
-    /* Styling for the post preview container */
-    #latest-post {
-      max-width: 600px;
-      margin: 2rem auto;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      padding: 1rem;
+    .hero a {
+      display: inline-block;
+      margin-top: 2rem;
     }
   </style>
 </head>
-
 <body>
-  <div class="container">
-    <!-- Logo & headline -->
-    <a href="/"><img src="images/Logo.png" alt="AnchorStack Logo" style="max-width:220px; margin-bottom:1rem;"></a>
-    <h1>Build Better. Stack Smarter.</h1>
-    <p>You don’t need more tools. You need the *right* ones — layered intentionally, delivered clearly, and built to last.</p>
-    <a class="button" href="/vault">Enter the Vault</a>
-    <a class="button" href="/about">About AnchorStack</a>
-
-    <!-- Latest Post Preview -->
-    <section id="latest-post">
-      <div
-        class="substack-post"
-        data-post="https://rickyjarnagin.substack.com/p/how-i-built-the-combo-pack-in-a-weekend">
-      </div>
-    </s
-
+  <div class="hero">
+    <a href="vault.html">
+      <img src="images/hero.png" alt="AnchorStack Vault Hero" />
+    </a>
+  </div>
+</body>
+</html>
